parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expressions
Rule 1     expressions -> expression
Rule 2     expressions -> expressions expression
Rule 3     expressions -> exp_exit
Rule 4     expression -> exp_select
Rule 5     expression -> exp_create_table
Rule 6     expression -> exp_create_index
Rule 7     expression -> exp_insert
Rule 8     expression -> exp_drop_table
Rule 9     expression -> exp_drop_index
Rule 10    expression -> exp_delete
Rule 11    expression -> exp_execfile
Rule 12    exp_exit -> EXIT
Rule 13    exp_drop_table -> DROP TABLE COLUMN END
Rule 14    exp_drop_index -> DROP INDEX COLUMN END
Rule 15    exp_delete -> DELETE FROM COLUMN END
Rule 16    exp_delete -> DELETE FROM COLUMN WHERE exp_condition END
Rule 17    exp_select -> SELECT columns FROM COLUMN END
Rule 18    exp_select -> SELECT STAR FROM COLUMN END
Rule 19    exp_select -> SELECT STAR FROM COLUMN WHERE exp_condition END
Rule 20    exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END
Rule 21    exp_create_table -> CREATE TABLE COLUMN LFPARENTH exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
Rule 22    exp_create_index -> CREATE INDEX COLUMN ON COLUMN LFPARENTH COLUMN RGPARENTH END
Rule 23    exp_attributes -> exp_attribute
Rule 24    exp_attributes -> exp_attributes COMMA exp_attribute
Rule 25    exp_attribute -> COLUMN TYPE
Rule 26    exp_attribute -> COLUMN CHAR LFPARENTH COLUMN RGPARENTH
Rule 27    exp_attribute -> COLUMN TYPE UNIQUE
Rule 28    exp_attribute -> COLUMN CHAR LFPARENTH COLUMN RGPARENTH UNIQUE
Rule 29    exp_insert -> INSERT INTO COLUMN exp_insert_end
Rule 30    exp_condition -> COLUMN OP COLUMN
Rule 31    exp_condition -> COLUMN OP COLUMN AND exp_condition
Rule 32    exp_insert_end -> VALUES LFPARENTH columns RGPARENTH END
Rule 33    exp_insert_end -> LFPARENTH columns RGPARENTH VALUES LFPARENTH columns RGPARENTH END
Rule 34    columns -> COLUMN
Rule 35    columns -> COLUMN COMMA columns
Rule 36    exp_execfile -> EXECFILE COLUMN END

Terminals, with rules where they appear

AND                  : 31
CHAR                 : 26 28
COLUMN               : 13 14 15 16 17 18 19 20 21 21 22 22 22 25 26 26 27 28 28 29 30 30 31 31 34 35 36
COMMA                : 21 24 35
CREATE               : 21 22
DELETE               : 15 16
DROP                 : 13 14
END                  : 13 14 15 16 17 18 19 20 21 22 32 33 36
EXECFILE             : 36
EXIT                 : 12
FROM                 : 15 16 17 18 19 20
INDEX                : 14 22
INSERT               : 29
INTO                 : 29
KEY                  : 21
LFPARENTH            : 21 21 22 26 28 32 33 33
ON                   : 22
OP                   : 30 31
PRIMARY              : 21
RGPARENTH            : 21 21 22 26 28 32 33 33
SELECT               : 17 18 19 20
STAR                 : 18 19
TABLE                : 13 21
TYPE                 : 25 27
UNIQUE               : 27 28
VALUES               : 32 33
WHERE                : 16 19 20
error                : 

Nonterminals, with rules where they appear

columns              : 17 20 32 33 33 35
exp_attribute        : 23 24
exp_attributes       : 21 24
exp_condition        : 16 19 20 31
exp_create_index     : 6
exp_create_table     : 5
exp_delete           : 10
exp_drop_index       : 9
exp_drop_table       : 8
exp_execfile         : 11
exp_exit             : 3
exp_insert           : 7
exp_insert_end       : 29
exp_select           : 4
expression           : 1 2
expressions          : 2 0

Parsing method: LALR

state 0

    (0) S' -> . expressions
    (1) expressions -> . expression
    (2) expressions -> . expressions expression
    (3) expressions -> . exp_exit
    (4) expression -> . exp_select
    (5) expression -> . exp_create_table
    (6) expression -> . exp_create_index
    (7) expression -> . exp_insert
    (8) expression -> . exp_drop_table
    (9) expression -> . exp_drop_index
    (10) expression -> . exp_delete
    (11) expression -> . exp_execfile
    (12) exp_exit -> . EXIT
    (17) exp_select -> . SELECT columns FROM COLUMN END
    (18) exp_select -> . SELECT STAR FROM COLUMN END
    (19) exp_select -> . SELECT STAR FROM COLUMN WHERE exp_condition END
    (20) exp_select -> . SELECT columns FROM COLUMN WHERE exp_condition END
    (21) exp_create_table -> . CREATE TABLE COLUMN LFPARENTH exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
    (22) exp_create_index -> . CREATE INDEX COLUMN ON COLUMN LFPARENTH COLUMN RGPARENTH END
    (29) exp_insert -> . INSERT INTO COLUMN exp_insert_end
    (13) exp_drop_table -> . DROP TABLE COLUMN END
    (14) exp_drop_index -> . DROP INDEX COLUMN END
    (15) exp_delete -> . DELETE FROM COLUMN END
    (16) exp_delete -> . DELETE FROM COLUMN WHERE exp_condition END
    (36) exp_execfile -> . EXECFILE COLUMN END

    EXIT            shift and go to state 12
    SELECT          shift and go to state 13
    CREATE          shift and go to state 14
    INSERT          shift and go to state 15
    DROP            shift and go to state 16
    DELETE          shift and go to state 17
    EXECFILE        shift and go to state 18

    expressions                    shift and go to state 1
    expression                     shift and go to state 2
    exp_exit                       shift and go to state 3
    exp_select                     shift and go to state 4
    exp_create_table               shift and go to state 5
    exp_create_index               shift and go to state 6
    exp_insert                     shift and go to state 7
    exp_drop_table                 shift and go to state 8
    exp_drop_index                 shift and go to state 9
    exp_delete                     shift and go to state 10
    exp_execfile                   shift and go to state 11

state 1

    (0) S' -> expressions .
    (2) expressions -> expressions . expression
    (4) expression -> . exp_select
    (5) expression -> . exp_create_table
    (6) expression -> . exp_create_index
    (7) expression -> . exp_insert
    (8) expression -> . exp_drop_table
    (9) expression -> . exp_drop_index
    (10) expression -> . exp_delete
    (11) expression -> . exp_execfile
    (17) exp_select -> . SELECT columns FROM COLUMN END
    (18) exp_select -> . SELECT STAR FROM COLUMN END
    (19) exp_select -> . SELECT STAR FROM COLUMN WHERE exp_condition END
    (20) exp_select -> . SELECT columns FROM COLUMN WHERE exp_condition END
    (21) exp_create_table -> . CREATE TABLE COLUMN LFPARENTH exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
    (22) exp_create_index -> . CREATE INDEX COLUMN ON COLUMN LFPARENTH COLUMN RGPARENTH END
    (29) exp_insert -> . INSERT INTO COLUMN exp_insert_end
    (13) exp_drop_table -> . DROP TABLE COLUMN END
    (14) exp_drop_index -> . DROP INDEX COLUMN END
    (15) exp_delete -> . DELETE FROM COLUMN END
    (16) exp_delete -> . DELETE FROM COLUMN WHERE exp_condition END
    (36) exp_execfile -> . EXECFILE COLUMN END

    SELECT          shift and go to state 13
    CREATE          shift and go to state 14
    INSERT          shift and go to state 15
    DROP            shift and go to state 16
    DELETE          shift and go to state 17
    EXECFILE        shift and go to state 18

    expression                     shift and go to state 19
    exp_select                     shift and go to state 4
    exp_create_table               shift and go to state 5
    exp_create_index               shift and go to state 6
    exp_insert                     shift and go to state 7
    exp_drop_table                 shift and go to state 8
    exp_drop_index                 shift and go to state 9
    exp_delete                     shift and go to state 10
    exp_execfile                   shift and go to state 11

state 2

    (1) expressions -> expression .

    SELECT          reduce using rule 1 (expressions -> expression .)
    CREATE          reduce using rule 1 (expressions -> expression .)
    INSERT          reduce using rule 1 (expressions -> expression .)
    DROP            reduce using rule 1 (expressions -> expression .)
    DELETE          reduce using rule 1 (expressions -> expression .)
    EXECFILE        reduce using rule 1 (expressions -> expression .)
    $end            reduce using rule 1 (expressions -> expression .)


state 3

    (3) expressions -> exp_exit .

    SELECT          reduce using rule 3 (expressions -> exp_exit .)
    CREATE          reduce using rule 3 (expressions -> exp_exit .)
    INSERT          reduce using rule 3 (expressions -> exp_exit .)
    DROP            reduce using rule 3 (expressions -> exp_exit .)
    DELETE          reduce using rule 3 (expressions -> exp_exit .)
    EXECFILE        reduce using rule 3 (expressions -> exp_exit .)
    $end            reduce using rule 3 (expressions -> exp_exit .)


state 4

    (4) expression -> exp_select .

    SELECT          reduce using rule 4 (expression -> exp_select .)
    CREATE          reduce using rule 4 (expression -> exp_select .)
    INSERT          reduce using rule 4 (expression -> exp_select .)
    DROP            reduce using rule 4 (expression -> exp_select .)
    DELETE          reduce using rule 4 (expression -> exp_select .)
    EXECFILE        reduce using rule 4 (expression -> exp_select .)
    $end            reduce using rule 4 (expression -> exp_select .)


state 5

    (5) expression -> exp_create_table .

    SELECT          reduce using rule 5 (expression -> exp_create_table .)
    CREATE          reduce using rule 5 (expression -> exp_create_table .)
    INSERT          reduce using rule 5 (expression -> exp_create_table .)
    DROP            reduce using rule 5 (expression -> exp_create_table .)
    DELETE          reduce using rule 5 (expression -> exp_create_table .)
    EXECFILE        reduce using rule 5 (expression -> exp_create_table .)
    $end            reduce using rule 5 (expression -> exp_create_table .)


state 6

    (6) expression -> exp_create_index .

    SELECT          reduce using rule 6 (expression -> exp_create_index .)
    CREATE          reduce using rule 6 (expression -> exp_create_index .)
    INSERT          reduce using rule 6 (expression -> exp_create_index .)
    DROP            reduce using rule 6 (expression -> exp_create_index .)
    DELETE          reduce using rule 6 (expression -> exp_create_index .)
    EXECFILE        reduce using rule 6 (expression -> exp_create_index .)
    $end            reduce using rule 6 (expression -> exp_create_index .)


state 7

    (7) expression -> exp_insert .

    SELECT          reduce using rule 7 (expression -> exp_insert .)
    CREATE          reduce using rule 7 (expression -> exp_insert .)
    INSERT          reduce using rule 7 (expression -> exp_insert .)
    DROP            reduce using rule 7 (expression -> exp_insert .)
    DELETE          reduce using rule 7 (expression -> exp_insert .)
    EXECFILE        reduce using rule 7 (expression -> exp_insert .)
    $end            reduce using rule 7 (expression -> exp_insert .)


state 8

    (8) expression -> exp_drop_table .

    SELECT          reduce using rule 8 (expression -> exp_drop_table .)
    CREATE          reduce using rule 8 (expression -> exp_drop_table .)
    INSERT          reduce using rule 8 (expression -> exp_drop_table .)
    DROP            reduce using rule 8 (expression -> exp_drop_table .)
    DELETE          reduce using rule 8 (expression -> exp_drop_table .)
    EXECFILE        reduce using rule 8 (expression -> exp_drop_table .)
    $end            reduce using rule 8 (expression -> exp_drop_table .)


state 9

    (9) expression -> exp_drop_index .

    SELECT          reduce using rule 9 (expression -> exp_drop_index .)
    CREATE          reduce using rule 9 (expression -> exp_drop_index .)
    INSERT          reduce using rule 9 (expression -> exp_drop_index .)
    DROP            reduce using rule 9 (expression -> exp_drop_index .)
    DELETE          reduce using rule 9 (expression -> exp_drop_index .)
    EXECFILE        reduce using rule 9 (expression -> exp_drop_index .)
    $end            reduce using rule 9 (expression -> exp_drop_index .)


state 10

    (10) expression -> exp_delete .

    SELECT          reduce using rule 10 (expression -> exp_delete .)
    CREATE          reduce using rule 10 (expression -> exp_delete .)
    INSERT          reduce using rule 10 (expression -> exp_delete .)
    DROP            reduce using rule 10 (expression -> exp_delete .)
    DELETE          reduce using rule 10 (expression -> exp_delete .)
    EXECFILE        reduce using rule 10 (expression -> exp_delete .)
    $end            reduce using rule 10 (expression -> exp_delete .)


state 11

    (11) expression -> exp_execfile .

    SELECT          reduce using rule 11 (expression -> exp_execfile .)
    CREATE          reduce using rule 11 (expression -> exp_execfile .)
    INSERT          reduce using rule 11 (expression -> exp_execfile .)
    DROP            reduce using rule 11 (expression -> exp_execfile .)
    DELETE          reduce using rule 11 (expression -> exp_execfile .)
    EXECFILE        reduce using rule 11 (expression -> exp_execfile .)
    $end            reduce using rule 11 (expression -> exp_execfile .)


state 12

    (12) exp_exit -> EXIT .

    SELECT          reduce using rule 12 (exp_exit -> EXIT .)
    CREATE          reduce using rule 12 (exp_exit -> EXIT .)
    INSERT          reduce using rule 12 (exp_exit -> EXIT .)
    DROP            reduce using rule 12 (exp_exit -> EXIT .)
    DELETE          reduce using rule 12 (exp_exit -> EXIT .)
    EXECFILE        reduce using rule 12 (exp_exit -> EXIT .)
    $end            reduce using rule 12 (exp_exit -> EXIT .)


state 13

    (17) exp_select -> SELECT . columns FROM COLUMN END
    (18) exp_select -> SELECT . STAR FROM COLUMN END
    (19) exp_select -> SELECT . STAR FROM COLUMN WHERE exp_condition END
    (20) exp_select -> SELECT . columns FROM COLUMN WHERE exp_condition END
    (34) columns -> . COLUMN
    (35) columns -> . COLUMN COMMA columns

    STAR            shift and go to state 22
    COLUMN          shift and go to state 21

    columns                        shift and go to state 20

state 14

    (21) exp_create_table -> CREATE . TABLE COLUMN LFPARENTH exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
    (22) exp_create_index -> CREATE . INDEX COLUMN ON COLUMN LFPARENTH COLUMN RGPARENTH END

    TABLE           shift and go to state 23
    INDEX           shift and go to state 24


state 15

    (29) exp_insert -> INSERT . INTO COLUMN exp_insert_end

    INTO            shift and go to state 25


state 16

    (13) exp_drop_table -> DROP . TABLE COLUMN END
    (14) exp_drop_index -> DROP . INDEX COLUMN END

    TABLE           shift and go to state 26
    INDEX           shift and go to state 27


state 17

    (15) exp_delete -> DELETE . FROM COLUMN END
    (16) exp_delete -> DELETE . FROM COLUMN WHERE exp_condition END

    FROM            shift and go to state 28


state 18

    (36) exp_execfile -> EXECFILE . COLUMN END

    COLUMN          shift and go to state 29


state 19

    (2) expressions -> expressions expression .

    SELECT          reduce using rule 2 (expressions -> expressions expression .)
    CREATE          reduce using rule 2 (expressions -> expressions expression .)
    INSERT          reduce using rule 2 (expressions -> expressions expression .)
    DROP            reduce using rule 2 (expressions -> expressions expression .)
    DELETE          reduce using rule 2 (expressions -> expressions expression .)
    EXECFILE        reduce using rule 2 (expressions -> expressions expression .)
    $end            reduce using rule 2 (expressions -> expressions expression .)


state 20

    (17) exp_select -> SELECT columns . FROM COLUMN END
    (20) exp_select -> SELECT columns . FROM COLUMN WHERE exp_condition END

    FROM            shift and go to state 30


state 21

    (34) columns -> COLUMN .
    (35) columns -> COLUMN . COMMA columns

    FROM            reduce using rule 34 (columns -> COLUMN .)
    RGPARENTH       reduce using rule 34 (columns -> COLUMN .)
    COMMA           shift and go to state 31


state 22

    (18) exp_select -> SELECT STAR . FROM COLUMN END
    (19) exp_select -> SELECT STAR . FROM COLUMN WHERE exp_condition END

    FROM            shift and go to state 32


state 23

    (21) exp_create_table -> CREATE TABLE . COLUMN LFPARENTH exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END

    COLUMN          shift and go to state 33


state 24

    (22) exp_create_index -> CREATE INDEX . COLUMN ON COLUMN LFPARENTH COLUMN RGPARENTH END

    COLUMN          shift and go to state 34


state 25

    (29) exp_insert -> INSERT INTO . COLUMN exp_insert_end

    COLUMN          shift and go to state 35


state 26

    (13) exp_drop_table -> DROP TABLE . COLUMN END

    COLUMN          shift and go to state 36


state 27

    (14) exp_drop_index -> DROP INDEX . COLUMN END

    COLUMN          shift and go to state 37


state 28

    (15) exp_delete -> DELETE FROM . COLUMN END
    (16) exp_delete -> DELETE FROM . COLUMN WHERE exp_condition END

    COLUMN          shift and go to state 38


state 29

    (36) exp_execfile -> EXECFILE COLUMN . END

    END             shift and go to state 39


state 30

    (17) exp_select -> SELECT columns FROM . COLUMN END
    (20) exp_select -> SELECT columns FROM . COLUMN WHERE exp_condition END

    COLUMN          shift and go to state 40


state 31

    (35) columns -> COLUMN COMMA . columns
    (34) columns -> . COLUMN
    (35) columns -> . COLUMN COMMA columns

    COLUMN          shift and go to state 21

    columns                        shift and go to state 41

state 32

    (18) exp_select -> SELECT STAR FROM . COLUMN END
    (19) exp_select -> SELECT STAR FROM . COLUMN WHERE exp_condition END

    COLUMN          shift and go to state 42


state 33

    (21) exp_create_table -> CREATE TABLE COLUMN . LFPARENTH exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END

    LFPARENTH       shift and go to state 43


state 34

    (22) exp_create_index -> CREATE INDEX COLUMN . ON COLUMN LFPARENTH COLUMN RGPARENTH END

    ON              shift and go to state 44


state 35

    (29) exp_insert -> INSERT INTO COLUMN . exp_insert_end
    (32) exp_insert_end -> . VALUES LFPARENTH columns RGPARENTH END
    (33) exp_insert_end -> . LFPARENTH columns RGPARENTH VALUES LFPARENTH columns RGPARENTH END

    VALUES          shift and go to state 46
    LFPARENTH       shift and go to state 47

    exp_insert_end                 shift and go to state 45

state 36

    (13) exp_drop_table -> DROP TABLE COLUMN . END

    END             shift and go to state 48


state 37

    (14) exp_drop_index -> DROP INDEX COLUMN . END

    END             shift and go to state 49


state 38

    (15) exp_delete -> DELETE FROM COLUMN . END
    (16) exp_delete -> DELETE FROM COLUMN . WHERE exp_condition END

    END             shift and go to state 50
    WHERE           shift and go to state 51


state 39

    (36) exp_execfile -> EXECFILE COLUMN END .

    SELECT          reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)
    CREATE          reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)
    INSERT          reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)
    DROP            reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)
    DELETE          reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)
    EXECFILE        reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)
    $end            reduce using rule 36 (exp_execfile -> EXECFILE COLUMN END .)


state 40

    (17) exp_select -> SELECT columns FROM COLUMN . END
    (20) exp_select -> SELECT columns FROM COLUMN . WHERE exp_condition END

    END             shift and go to state 52
    WHERE           shift and go to state 53


state 41

    (35) columns -> COLUMN COMMA columns .

    FROM            reduce using rule 35 (columns -> COLUMN COMMA columns .)
    RGPARENTH       reduce using rule 35 (columns -> COLUMN COMMA columns .)


state 42

    (18) exp_select -> SELECT STAR FROM COLUMN . END
    (19) exp_select -> SELECT STAR FROM COLUMN . WHERE exp_condition END

    END             shift and go to state 54
    WHERE           shift and go to state 55


state 43

    (21) exp_create_table -> CREATE TABLE COLUMN LFPARENTH . exp_attributes COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
    (23) exp_attributes -> . exp_attribute
    (24) exp_attributes -> . exp_attributes COMMA exp_attribute
    (25) exp_attribute -> . COLUMN TYPE
    (26) exp_attribute -> . COLUMN CHAR LFPARENTH COLUMN RGPARENTH
    (27) exp_attribute -> . COLUMN TYPE UNIQUE
    (28) exp_attribute -> . COLUMN CHAR LFPARENTH COLUMN RGPARENTH UNIQUE

    COLUMN          shift and go to state 56

    exp_attributes                 shift and go to state 57
    exp_attribute                  shift and go to state 58

state 44

    (22) exp_create_index -> CREATE INDEX COLUMN ON . COLUMN LFPARENTH COLUMN RGPARENTH END

    COLUMN          shift and go to state 59


state 45

    (29) exp_insert -> INSERT INTO COLUMN exp_insert_end .

    SELECT          reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)
    CREATE          reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)
    INSERT          reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)
    DROP            reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)
    DELETE          reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)
    EXECFILE        reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)
    $end            reduce using rule 29 (exp_insert -> INSERT INTO COLUMN exp_insert_end .)


state 46

    (32) exp_insert_end -> VALUES . LFPARENTH columns RGPARENTH END

    LFPARENTH       shift and go to state 60


state 47

    (33) exp_insert_end -> LFPARENTH . columns RGPARENTH VALUES LFPARENTH columns RGPARENTH END
    (34) columns -> . COLUMN
    (35) columns -> . COLUMN COMMA columns

    COLUMN          shift and go to state 21

    columns                        shift and go to state 61

state 48

    (13) exp_drop_table -> DROP TABLE COLUMN END .

    SELECT          reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)
    CREATE          reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)
    INSERT          reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)
    DROP            reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)
    DELETE          reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)
    EXECFILE        reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)
    $end            reduce using rule 13 (exp_drop_table -> DROP TABLE COLUMN END .)


state 49

    (14) exp_drop_index -> DROP INDEX COLUMN END .

    SELECT          reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)
    CREATE          reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)
    INSERT          reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)
    DROP            reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)
    DELETE          reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)
    EXECFILE        reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)
    $end            reduce using rule 14 (exp_drop_index -> DROP INDEX COLUMN END .)


state 50

    (15) exp_delete -> DELETE FROM COLUMN END .

    SELECT          reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)
    CREATE          reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)
    INSERT          reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)
    DROP            reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)
    DELETE          reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)
    EXECFILE        reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)
    $end            reduce using rule 15 (exp_delete -> DELETE FROM COLUMN END .)


state 51

    (16) exp_delete -> DELETE FROM COLUMN WHERE . exp_condition END
    (30) exp_condition -> . COLUMN OP COLUMN
    (31) exp_condition -> . COLUMN OP COLUMN AND exp_condition

    COLUMN          shift and go to state 62

    exp_condition                  shift and go to state 63

state 52

    (17) exp_select -> SELECT columns FROM COLUMN END .

    SELECT          reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)
    CREATE          reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)
    INSERT          reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)
    DROP            reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)
    DELETE          reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)
    EXECFILE        reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)
    $end            reduce using rule 17 (exp_select -> SELECT columns FROM COLUMN END .)


state 53

    (20) exp_select -> SELECT columns FROM COLUMN WHERE . exp_condition END
    (30) exp_condition -> . COLUMN OP COLUMN
    (31) exp_condition -> . COLUMN OP COLUMN AND exp_condition

    COLUMN          shift and go to state 62

    exp_condition                  shift and go to state 64

state 54

    (18) exp_select -> SELECT STAR FROM COLUMN END .

    SELECT          reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)
    CREATE          reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)
    INSERT          reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)
    DROP            reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)
    DELETE          reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)
    EXECFILE        reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)
    $end            reduce using rule 18 (exp_select -> SELECT STAR FROM COLUMN END .)


state 55

    (19) exp_select -> SELECT STAR FROM COLUMN WHERE . exp_condition END
    (30) exp_condition -> . COLUMN OP COLUMN
    (31) exp_condition -> . COLUMN OP COLUMN AND exp_condition

    COLUMN          shift and go to state 62

    exp_condition                  shift and go to state 65

state 56

    (25) exp_attribute -> COLUMN . TYPE
    (26) exp_attribute -> COLUMN . CHAR LFPARENTH COLUMN RGPARENTH
    (27) exp_attribute -> COLUMN . TYPE UNIQUE
    (28) exp_attribute -> COLUMN . CHAR LFPARENTH COLUMN RGPARENTH UNIQUE

    TYPE            shift and go to state 66
    CHAR            shift and go to state 67


state 57

    (21) exp_create_table -> CREATE TABLE COLUMN LFPARENTH exp_attributes . COMMA PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
    (24) exp_attributes -> exp_attributes . COMMA exp_attribute

    COMMA           shift and go to state 68


state 58

    (23) exp_attributes -> exp_attribute .

    COMMA           reduce using rule 23 (exp_attributes -> exp_attribute .)


state 59

    (22) exp_create_index -> CREATE INDEX COLUMN ON COLUMN . LFPARENTH COLUMN RGPARENTH END

    LFPARENTH       shift and go to state 69


state 60

    (32) exp_insert_end -> VALUES LFPARENTH . columns RGPARENTH END
    (34) columns -> . COLUMN
    (35) columns -> . COLUMN COMMA columns

    COLUMN          shift and go to state 21

    columns                        shift and go to state 70

state 61

    (33) exp_insert_end -> LFPARENTH columns . RGPARENTH VALUES LFPARENTH columns RGPARENTH END

    RGPARENTH       shift and go to state 71


state 62

    (30) exp_condition -> COLUMN . OP COLUMN
    (31) exp_condition -> COLUMN . OP COLUMN AND exp_condition

    OP              shift and go to state 72


state 63

    (16) exp_delete -> DELETE FROM COLUMN WHERE exp_condition . END

    END             shift and go to state 73


state 64

    (20) exp_select -> SELECT columns FROM COLUMN WHERE exp_condition . END

    END             shift and go to state 74


state 65

    (19) exp_select -> SELECT STAR FROM COLUMN WHERE exp_condition . END

    END             shift and go to state 75


state 66

    (25) exp_attribute -> COLUMN TYPE .
    (27) exp_attribute -> COLUMN TYPE . UNIQUE

    COMMA           reduce using rule 25 (exp_attribute -> COLUMN TYPE .)
    UNIQUE          shift and go to state 76


state 67

    (26) exp_attribute -> COLUMN CHAR . LFPARENTH COLUMN RGPARENTH
    (28) exp_attribute -> COLUMN CHAR . LFPARENTH COLUMN RGPARENTH UNIQUE

    LFPARENTH       shift and go to state 77


state 68

    (21) exp_create_table -> CREATE TABLE COLUMN LFPARENTH exp_attributes COMMA . PRIMARY KEY LFPARENTH COLUMN RGPARENTH RGPARENTH END
    (24) exp_attributes -> exp_attributes COMMA . exp_attribute
    (25) exp_attribute -> . COLUMN TYPE
    (26) exp_attribute -> . COLUMN CHAR LFPARENTH COLUMN RGPARENTH
    (27) exp_attribute -> . COLUMN TYPE UNIQUE
    (28) exp_attribute -> . COLUMN CHAR LFPARENTH COLUMN RGPARENTH UNIQUE

    PRIMARY         shift and go to state 78
    COLUMN          shift and go to state 56

    exp_attribute                  shift and go to state 79

state 69

    (22) exp_create_index -> CREATE INDEX COLUMN ON COLUMN LFPARENTH . COLUMN RGPARENTH END

    COLUMN          shift and go to state 80


state 70

    (32) exp_insert_end -> VALUES LFPARENTH columns . RGPARENTH END

    RGPARENTH       shift and go to state 81


state 71

    (33) exp_insert_end -> LFPARENTH columns RGPARENTH . VALUES LFPARENTH columns RGPARENTH END

    VALUES          shift and go to state 82


state 72

    (30) exp_condition -> COLUMN OP . COLUMN
    (31) exp_condition -> COLUMN OP . COLUMN AND exp_condition

    COLUMN          shift and go to state 83


state 73

    (16) exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .

    SELECT          reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)
    CREATE          reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)
    INSERT          reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)
    DROP            reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)
    DELETE          reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)
    EXECFILE        reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)
    $end            reduce using rule 16 (exp_delete -> DELETE FROM COLUMN WHERE exp_condition END .)


state 74

    (20) exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .

    SELECT          reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)
    CREATE          reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)
    INSERT          reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)
    DROP            reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)
    DELETE          reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)
    EXECFILE        reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)
    $end            reduce using rule 20 (exp_select -> SELECT columns FROM COLUMN WHERE exp_condition END .)


state 75

    (19) exp_select -> SELECT STAR FROM COLUMN WHERE exp_condition END .
